syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

// HostProvision entity
message HostProvision {
  string id = 1;
  optional string host_id = 2;
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp claimed_at = 4;
  optional string install_cmd = 5;
  string ip_range_from = 6;
  string ip_range_to = 7;
  string ip_gateway = 8;
  optional string org_id = 9;
}

// Host provisioning
service HostProvisions {
  // Get a single host provision identified by ID or a list of all available
  // host provisions
  rpc Get(GetHostProvisionRequest) returns (GetHostProvisionResponse);
  // Create a single host provision
  rpc Create(CreateHostProvisionRequest) returns (CreateHostProvisionResponse);
}

message GetHostProvisionRequest {
  string id = 1;
}

message GetHostProvisionResponse {
  HostProvision host_provisions = 1;
}

message CreateHostProvisionRequest {
  string ip_range_from = 1;
  string ip_range_to = 2;
  string ip_gateway = 3;
}

message CreateHostProvisionResponse {
  HostProvision host_provision = 1;
}
